# progate-aed-hackathon

./: .dockerignore  .flake8  .gitignore  DOCS.md  Dockerfile  Makefile  README.md  bedrock_embeddings_analysis.md  calico-installation.yaml  package.json  pnpm-lock.yaml  pyproject.toml  ruff.toml  test_chahan_analysis.py  trust-policy.json
.github/workflows/: pydantic2ts.yml  terraform-lint.yml  tool-call.yml
app/backend/: server.py
app/backend/routers/: rpc.py  search.py
app/backend/utils/: __init__.py  japanese_chars.py
app/crawler/: README.md  __init__.py  _tasks.md
app/crawler/config/: aws_init.py  dev.yaml  devlocal.yaml  local.yaml  prod.yaml  settings.py  staging.yaml  test.yaml  validator.py
app/crawler/coordinator/: discovery_coordinator.py
app/crawler/core/: types.py
app/crawler/discovery/: _bloomfilter.py  deduplication.py  local_queue_manager.py  queue_manager.py  sitemap_parser.py
app/crawler/http_client/: client.py  parser.py  robots.py
app/frontend/: package-lock.json  package.json  pnpm-lock.yaml
app/indexer/: Dockerfile  __init__.py  bedrock_client.py  cli.py  config.py  dlq_handler.py  document_processor.py  exceptions.py  index_templates.py  initialization.py  main.py  mecab_analyzer.py  metrics_collector.py  opensearch_client.py  setup_opensearch.py  text_chunker.py
app/mobile/: package.json  pnpm-lock.yaml
app/schema/: __init__.py  charwidth.py  common.py  search.py  storage.py
app/search/: __init__.py  config.py  search_service.py
frontend/types/: common.ts  storage.ts
infra/: dev.tfvars  devlocal.tfvars  main.tf  providers.tf  versions.tf
k8s/: crawler-configmap.yaml  crawler-deployment.yaml  crawler-hpa.yaml  crawler-scaledobject.yaml  crawler-secret.yaml  crawler-service.yaml  indexer-config.yaml  indexer-deployment.yaml  indexer-scaledobject.yaml  indexer-secret.yaml  keda-setup.yaml
localstack/: docker-compose.yml  init-resources.sh
migrations/: 20250909_082305_add_users.py  20250909_082734_add_users.py  20250909_083034_add_users.py  20250909_083230_add_users.py  20250909_162732_add_users.py
scripts/: build-and-push.sh  clean-deploy-to-eks.sh  deploy-to-eks-minimal.sh  deploy-to-eks.sh  install-keda.sh  update-k8s-config.sh
specs/: design.md  requirements.md  tasks.md
tools/migrate/: __main__.py  _generator.py
tools/migration/: migration.py
tools/pydantic2ts/: __main__.py
tools/routes2rpcc/: __main__.py
(+70 files in other folders)
