[project]
name = "progate-aed-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.25",
    "fastapi[standard]>=0.116.1",
    "pydantic>=2.11.7",
    "pynamodb>=6.1.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "boto3-stubs[dynamodb,essential]>=1.40.26",
    "progate-aed-hackathon",
    "pyright>=1.1.405",
    "ruff>=0.12.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
progate-aed-hackathon = { workspace = true }

[project.scripts]
pydantic2ts = "tools.pydantic2ts.__main__:main"
migrate = "tools.migrate.__main__:main"
